# SystemIntegration1stSem

./: LICENSE
00._Miscellaneous/: encoding.js  index.html  stripeiFrame.html
01._modules/html_no_module/: index.html  myModule.js
01._modules/node_commonjs/: index.js  myModule.js
01._modules/node_esmodules/: index.js  myModule.js
01._modules/python/: main.py
02._data_formats/: index.js  main.py  me.csv  me.json  me.txt  me.xml  me.yaml  package-lock.json
02._data_formats/data/: me.csv  me.json  me.txt  me.xml  me.yaml
02._data_formats/node/: index.js  package-lock.json  package.json
02._data_formats/python/: main.py
04._basic_servers/python/: main.py  pyproject.toml
04._basic_servers/python/translationServers/: main.py  pyproject.toml
05._date/node/: index.js
05._date/python/: main.py
06._server_to_server/node/: app.js  package.json
06._server_to_server/python/: main.py  pyproject.toml
07._dotenv/node/: index.js  package.json
07._dotenv/python/: main.py  pyproject.toml
08._database_documentation/: about.md
08._database_documentation/backup/: sampleDatabase.sql  test.sql
08._database_documentation/documentation/: football.json  football_mro_docs.html
09._OpenApi/hand_in_OpenApi/: app.js  package-lock.json  package.json
09._OpenApi/java/: SwaggerConfig.java  about.md
09._OpenApi/node/: app.js  package-lock.json  package.json
09._OpenApi/python/: main.py  openapi.json  pyproject.toml
12._server-sent_events/node/: app.js
12._server-sent_events/python/: main.py  pyproject.toml
13_github_webhooks/node/: app.js
13_github_webhooks/python/: main.py  pyproject.toml
15._websockets/node/: client.js  index.html  server.js
15._websockets/python/: main.py  pyproject.toml
16._CORS/: index.html
16._CORS/node/: app.js
16._CORS/python/: main.py  pyproject.toml
17._multipart-forms/: index.html
17._multipart-forms/node/: app.js
17._multipart-forms/python/: main.py  pyproject.toml
17._multipart-forms/self_example/: app.js  index.html  package-lock.json  package.json
18._redis/node/: index.js
18._redis/pub_sub_example/: package-lock.json  package.json  publisher.js  (+1 more)
18._redis/python/pub-sub/: publisher.py  pyproject.toml  subscriber.py
18._redis/python/task_queues/: pyproject.toml  scheduler.py  worker.py
19._grapqhl/: app.js  graphql.root.js  package-lock.json  package.json
testpoetry/: pyproject.toml
(+21 files in other folders)
