[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Raszbanana <niko.hochloff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
fastapi = "^0.91.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
