[tool.poetry]
name = "pub-sub"
version = "0.1.0"
description = ""
authors = ["Raszbanana <niko.hochloff@gmail.com>"]
readme = "README.md"
packages = [{include = "pub_sub"}]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
